# dframework-dbus-qt6

./: .gitignore  CMakeLists.txt  DFrameworkdbusQt6Config.cmake.in  LICENSE  README.md  build-deb  generate_code.py  qdbusxml2cpp-fix
debian/: changelog  control  copyright  files  libdframeworkdbus-qt6-dev.install  libdframeworkdbus-qt6.install  rules
src/qtdbusextended/: dbusextendedabstractinterface.cpp
src/types/: defenderappflow.h  defenderdisplay.h  defenderdissection.h  defenderfileinfo.h  defenderprocessinfo.h  defenderprocesslist.h  defenderprocinfo.h  defenderprocinfolist.h  defenderupdatestate.h  defenderversioninfo.h  linkinfolist.cpp  sinkinfolist.cpp
tools/qdbusxml2cpp/: CMakeLists.txt  qdbusxml2cpp.cpp  qdbusxml2cpp.pro
xml/: com.deepin.dde.daemon.Dock.xml
